--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Javascript com TDD",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src/*.js",
+    "pre-push": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +18,11 @@
     "library"
   ],
   "author": "Renan Lima <renanlimabl@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "husky": "^4.2.5"
+  }
 }
